...
        android:layout_gravity="right|top"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/grade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Add note" />

    </LinearLayout>
...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/contact_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitEnd"
            android:text="Contact owner"
            android:textSize="11sp" />
...
