...
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add_icon"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites_icon"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages_icon"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_icon"
        android:title="@string/title_account" />

</menu>
