...
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/content_bottom_icon"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorites_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
...
