...
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="centerInside" />

        <ToggleButton
            android:id="@+id/button_favourite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="14dp"
            android:background="@drawable/button_favorite"
            android:checked="false"
...
