...
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/save_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SAVE" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
